# HPCC-Configurator

./: CMakeLists.txt  HPCC-Configurator.files  HPCC-Configurator.includes  version.cmake
cmake_modules/: configuratorCommonSetup.cmake
cmake_modules/dependencies/: trusty.cmake.in
configurator/: BuildSet.cpp  BuildSet.hpp  CMakeLists.txt  ComponentAttributes.hpp  ConfigFileUtils.cpp  ConfigMessages.cpp  ConfigMessages.hpp  ConfigNotifications.cpp  ConfigSchemaHelper.cpp  ConfigSchemaHelper.hpp  ConfiguratorAPI.cpp  ConfiguratorAPI.hpp  ConfiguratorMain.cpp  ConfiguratorMain.hpp  DojoHelper.cpp  EnvironmentModel.cpp  EnvironmentModel.hpp  ExceptionStrings.cpp  ExceptionStrings.hpp  QMLMarkup.cpp  QMLMarkup.hpp  SchemaAll.hpp  SchemaAnnotation.cpp  SchemaAnnotation.hpp  SchemaAppInfo.cpp  SchemaAppInfo.hpp  SchemaAttributeGroup.cpp  SchemaAttributeGroup.hpp  SchemaAttributes.cpp  SchemaAttributes.hpp  SchemaChoice.cpp  SchemaChoice.hpp  SchemaCommon.cpp  SchemaCommon.hpp  SchemaComplexContent.cpp  SchemaComplexContent.hpp  SchemaComplexType.cpp  SchemaComplexType.hpp  SchemaElement.cpp  SchemaElement.hpp  (+48 more)
configurator_app/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ui_MainWindow.h
configurator_ui/: AppData.cpp  AppData.hpp  CMakeLists.txt  configurator_ui.files
lib_qml/: AccordionItem.qml  Table.qml  test.qml
xsds/: buildset.xml  environment2.xml  hardware.xsd  sample.xsd  sample_attributes1.xsd  sample_attributes2.xsd
